@@ -1,2 +1,2 @@
 {'../../ejabberd-dev/trunk/src/gen_mod', [{outdir, "../../ejabberd-dev/trunk/ebin"},{i,"../../ejabberd-dev/trunk/include"}]}.
-{'src/web/mod_http_fileserver',     [{outdir, "ebin"},{i,"../../ejabberd-dev/trunk/include"}]}.
+{'src/web/mod_http_fileserver',     [{d,'SSL39'},{outdir, "ebin"},{i,"../../ejabberd-dev/trunk/include"}]}.
